<?xml version="1.0"?>
<package>
  <name>ros_type_introspection</name>
  <version>1.3.2</version>
  <description>
  The ros_type_introspection package allows the user to parse and deserialize
  ROS messages which type is unknown at compilation time.
  </description>

  <maintainer email="faconti@icarustechnology.com">Davide Faconti</maintainer>
  <license>BSD</license>


  <url>http://www.ros.org/wiki/ros_type_introspection</url>
  <author email="faconti@icarustechnology.com">Davide Faconti</author> 

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>abseil_cpp</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>abseil_cpp</run_depend>

</package>
