<?xml version="1.0"?>
<package>
  <name>ros_introspection_test</name>
  <version>1.1.0</version>
  <description>
  The ros_type_introspection_test package contains the test related to ros_type_introspection
  </description>

  <maintainer email="faconti@icarustechnology.com">Davide Faconti</maintainer>
  <license>BSD</license>


  <url>http://www.ros.org/wiki/ros_type_introspection</url>
  <author email="faconti@icarustechnology.com">Davide Faconti</author> 

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>ros_type_introspection</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>rosbag_storage</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>ros_type_introspection</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rosbag_storage</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <test_depend>gtest</test_depend>
  <test_depend>tf2</test_depend>

</package>
